--- a/myshoppinglist-server/package.json
+++ b/myshoppinglist-server/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "myshoppinglist-server",
+  "name": "nodeauth_updated",
   "version": "1.0.0",
+  "description": "dependencies",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
+    "fs": "^0.0.1-security",
+    "md5": "^2.2.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.1.0",
-    "nodemon": "^2.0.3",
-    "sequelize": "^5.21.6"
+    "path": "^0.12.7",
+    "sequelize": "^5.21.7",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {},
-  "description": ""
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
