--- a/myshoppinglist-server/package.json
+++ b/myshoppinglist-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyShoppingList/server",
+  "name": "myshopppinglist-server",
   "version": "1.0.0",
   "description": "dependencies",
   "main": "index.js",
